--- a/less6/loginForm/Base.lproj/Main.storyboard
+++ b/less6/loginForm/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ETc-LM-yWm">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Wy7-9j-beN">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
@@ -28,7 +28,7 @@
         <!--Login Form Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="LoginFormController" customModule="loginForm" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="BYZ-38-t0r" customClass="LoginFormController" customModule="loginForm" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -73,7 +73,7 @@
                                             <color key="titleColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
-                                            <segue destination="Lvf-NV-V5E" kind="showDetail" id="b0Y-YQ-27l"/>
+                                            <action selector="goNext:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4vd-9a-sov"/>
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oWK-z8-hyi">
@@ -136,6 +136,7 @@
                         <outlet property="scrollView" destination="Eu9-mH-Xry" id="qt2-Yc-xH1"/>
                         <outlet property="textFieldLogin" destination="Lyz-ug-E9g" id="x9X-48-mz4"/>
                         <outlet property="textFieldPass" destination="oXW-9L-xiS" id="GQw-2O-G8s"/>
+                        <segue destination="ETc-LM-yWm" kind="presentation" identifier="next" modalPresentationStyle="fullScreen" id="AId-TE-SNN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -881,6 +882,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ETc-LM-yWm" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="ADd-gn-iHX"/>
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" id="N0g-GQ-dne"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="lqs-xV-Tt0">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -910,8 +912,5 @@
         <image name="tray.and.arrow.up" catalog="system" width="64" height="56"/>
         <image name="wolf" width="211" height="300"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="Aij-9t-iWd"/>
-    </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
